# control

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.yaml  control_node_cfg.csv  package.xml
.github/: CODEOWNERS
.github/workflows/: colcon_build.yml
config/: control.yaml  control_node_cfg.csv
include/: vectors.hpp
include/ap1/control/: ackermann_controller.hpp  control_node.hpp  controller.hpp  icontroller.hpp  mpc_controller.hpp  pd_controller.hpp  vectors.hpp
src/: ackermann_controller.cpp  control_node.cpp  main.cpp  synthetic_actuation_feedback_node.cpp
