<?xml version="1.0"?>
<package format="3">
  <name>ap1_control</name>
  <version>0.1.0</version>
  <description>AP1 Control Node</description>

  <maintainer email="alyashour1@gmail.com">Aly</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ap1_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ap1_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
